# din-chain

./: Cargo.toml  README.md  local-spec.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: bag_thresholds.rs  constants.rs  lib.rs  precompiles.rs
scripts/: prepare-test-net.sh
